# bump_alloc

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: new.rs  with_size.rs
